--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <script src="scripts/phaser.js"></script>
-    <script src="scripts/game.js"></script>
-</head>
-<body>
-
-
-</body>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <title>Everyday Kitchen</title>
+    </head>
+    <body>
+        <script src="/scripts/vendor/phaser.min.js"></script>
+        <script src="/scripts/scenes/main.js"></script>
+        <script src="/scripts/config.js"></script>
+    </body>
 </html>
