added table on scene

--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <script src="scripts/phaser.js"></script>
-    <script src="scripts/game.js"></script>
 </head>
 <body>
-
-
+    <script src="scripts/phaser.js"></script>
+    <script src="scripts/data.js"></script>
+    <script src="scripts/game.js"></script>
 </body>
 </html>
