Position canvas in center

--- a/index.html
+++ b/index.html
@@ -3,6 +3,21 @@
     <head>
         <meta charset="UTF-8" />
         <title>Everyday Kitchen</title>
+        <style type="text/css">
+         body {
+             background: #000;
+         }
+         canvas {
+             padding: 0;
+             margin: auto;
+             display: block;
+             position: absolute;
+             top: 0;
+             bottom: 0;
+             left: 0;
+             right: 0;
+         }
+        </style>
     </head>
     <body>
         <script src="/scripts/vendor/phaser.min.js"></script>
