--- a/index.html
+++ b/index.html
@@ -20,9 +20,13 @@
         </style>
     </head>
     <body>
+        <!-- Vendor libraries like Phaser-->
         <script src="/scripts/vendor/phaser.min.js"></script>
+        <!-- All game data goes here-->
         <script src="/scripts/data.js"></script>
+        <!-- All scenes should go here -->
+        <script src="/scripts/scenes/tablet.js"></script>
         <script src="/scripts/scenes/main.js"></script>
-        <script src="/scripts/config.js"></script>
+        <script src="/scripts/boot.js"></script>
     </body>
 </html>
