added font for time

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <!-- All game data goes here-->
         <script src="/scripts/data.js"></script>
         <!-- All scenes should go here -->
+        <script src="/scripts/scenes/menu.js"></script>
         <script src="/scripts/scenes/tablet.js"></script>
         <script src="/scripts/scenes/main.js"></script>
         <script src="/scripts/boot.js"></script>
