--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <script src="/scripts/scenes/main.js"></script>
         <script src="/scripts/scenes/tablet.js"></script>
         <script src="/scripts/scenes/shelve.js"></script>
+        <script src="/scripts/scenes/stove.js"></script>
         <script src="/scripts/boot.js"></script>
     </body>
 </html>
