--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <style type="text/css">
          body {
              background: #000;
-        }
+         }
          canvas {
              display: block;
              padding: 0;
@@ -17,7 +17,7 @@
              right: 0;
              bottom: 0;
              left: 0;
-        }
+         }
         </style>
     </head>
     <body>
@@ -29,5 +29,18 @@
         <script src="/scripts/scenes/shelve.js"></script>
         <script src="/scripts/scenes/stove.js"></script>
         <script src="/scripts/boot.js"></script>
+        <script>
+         setInterval(
+             function () {
+                 if (timerStart) {
+                     if (timer) {
+                         timer -= 1;
+                     }
+                     console.log(timer);
+                 }
+             },
+             1000
+         );
+        </script>
     </body>
 </html>
