Disable character on times up

--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
              },
              1000
          );
+
+         if (!timer) {
+             timesUp = true;
+         }
         </script>
     </body>
 </html>
